Fix unwanted scrollbar in quicksearch popup

--- a/skins/chameleon/styles.less
+++ b/skins/chameleon/styles.less
@@ -1699,6 +1699,11 @@ a.button.changeformat.text.selected span.icon {
 	padding-top: 0.5em;
 }
 
+.popupmenu > .buttons {
+	height: 35px;
+	border-top: 0;
+}
+
 
 /*** message bar ***/
 
